python/testData/inspections/PyTypeCheckerInspection/NullArgumentMappedToPositionalParameter.py
class Kvas:
    def __getitem__(self, *item):
        pass


Kvas()[<error descr="Expression expected">]</error>